--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
     <header class="color">
         <!-- Barre de navigation -->
         <nav class="navbar">
-            <div class="logo" href="/img/maxresdefault.jpg">Menu</div>
+            <div class="logo">
+                <img src="/img/1200x1200bb.jpg" alt="Freeze"> <a>Menu </a></div>
             <ul class="nav-links">
-                <li ><a href="#home">Accueil</a></li>
+                <li><a href="#home">Accueil</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
-    <video controls width="250">
-        <source src="#" type="video/webm" />
-        <source src="/img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4" />
-        Download the
-        <a href="#">WEBM</a>
-        or
-        <a href="/img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4">MP4</a>
-        video.
-    </video>
+    <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1> 
+    
+    <div class="card-video">
+        <video class="video-content" controls>
+            <source src="/img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="card-content">
+            <h2 class="card-title">Video Title</h2>
+            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
+            <button class="card-button">Watch Full Video</button>
+        </div>
+    </div>
+
 </body>
-</html>
+</html>     
