--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Barre de navigation -->
         <nav class="navbar">
             <div class="logo">
-                <img src="/img/1200x1200bb.jpg" alt="Freeze"> <a>Menu </a></div>
+                <img src="/img/1200x1200bb.jpg" alt="Freeze"> <a> <button> Menu </button> </a></div>
             <ul class="nav-links">
                 <li><a href="#home">Accueil</a></li>
                 <li><a href="#services">Services</a></li>
@@ -20,8 +20,7 @@
             </ul>
         </nav>
     </header>
-    <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1> 
-    
+    <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
     <div class="card-video">
         <video class="video-content" controls>
             <source src="/img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
@@ -33,6 +32,9 @@
             <button class="card-button">Watch Full Video</button>
         </div>
     </div>
+    
+    <footer>
 
+    </footer>
 </body>
 </html>     
