--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Barre de navigation -->
         <nav class="navbar">
             <div class="logo">
-                <img src="/img/1200x1200bb.jpg" alt="Freeze"> <a> <button> Menu </button> </a></div>
+                <img src="/img/1200x1200bb.jpg" alt="Freeze"> <a> <button class="color"> Menu </button> </a></div>
             <ul class="nav-links">
                 <li><a href="#home">Accueil</a></li>
                 <li><a href="#services">Services</a></li>
@@ -29,9 +29,10 @@
         <div class="card-content">
             <h2 class="card-title">Video Title</h2>
             <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-            <button class="card-button">Watch Full Video</button>
+            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
         </div>
     </div>
+    <img src="/img/IMG_5870.jpg">
     
     <footer>
 
