--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
                             <button id="close-btn" class="close-btn">X</button> <!-- Bouton pour fermer la sidebar -->
                             <ul>
                                 <li><a href="#">Accueil</a></li>
+                                <div class="border-bottom">t</div>
                                 <li><a href="#">Services</a></li>
+                                <div class="border-bottom"></div>
                                 <li><a href="#">Contact</a></li>
+                                <div class="border-bottom"></div>
                             </ul>
                         </div>
             </div>
