--- a/test.html
+++ b/test.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    
-    <button id="menu-btn">Menu</button>
-    <div id="sidebar" class="sidebar">
-        <button id="close-btn" class="close-btn">X</button> <!-- Bouton pour fermer la sidebar -->
-        <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+    <div class="element">
+        <p>Contenu ici</p>
+        <div class="border-bottom"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
