--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freeze cordon bleu</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/1200x1200bb.jpg" type="image/png">
 </head>
 <body>
     <header class="color">
@@ -12,25 +13,36 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="img/1200x1200bb.jpg" alt="Freeze"> 
-                        <button id="menu-btn"> ☰Menu</button>
+                        <button id="menu-btn" class="menu-button"> ☰Menu</button>
                         <div id="sidebar" class="sidebar">
-                            <button id="close-btn" class="close-btn">X</button> <!-- Bouton pour fermer la sidebar -->
+                            <button id="button" class="button">
+                              <div class="button-box">
+                                <span class="button-elem">
+                                  <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"></path>
+                                  </svg>
+                                </span>
+                                <span class="button-elem">
+                                  <svg viewBox="0 0 46 40">
+                                    <path d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"></path>
+                                  </svg>
+                                </span>
+                              </div>
+                            </button>
+                            
                             <ul>
                                 <li><a href="#">Accueil</a></li>
-                                <div class="border-bottom">t</div>
                                 <li><a href="#">Services</a></li>
-                                <div class="border-bottom"></div>
                                 <li><a href="#">Contact</a></li>
-                                <div class="border-bottom"></div>
                             </ul>
                         </div>
             </div>
             <ul class="nav-links">
-                <li><a href="#home">Accueil</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="/test.html">site de Test</a></li>
+                    <li><a href="#home">Accueil</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">À propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                <li><a href="/nepal.html">Népal</a></li>
             </ul>
         </nav>
     </header>
