--- a/test.html
+++ b/test.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Latéral</title>
+    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script
     <link rel="stylesheet" href="test.css">
+    <script src="test.js" type="module"></script>
 </head>
 <body>
-    <div class="element">
-        <p>Contenu ici</p>
-        <div class="border-bottom"></div>
-    </div>
-    
-    <script src="script.js"></script>
+    <div class="container" speed=70>
+        <div class='scrolling-text'>
+          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
+            not so big but still very big</h2>
+        </div>
+      </div>
+      <div class="container left-to-right" speed=100>
+        <div class='scrolling-text'>
+          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
+            not so big but still very big</h2>
+        </div>
+      </div>
+      <div class="container">
+        <div class='scrolling-text'>
+          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
+            not so big but still very big</h2>
+        </div>
+      </div>       
 </body>
 </html>
