--- a/index.html
+++ b/index.html
@@ -31,17 +31,12 @@
                             </button>
                             
                             <ul>
-                                <li><a href="#">Accueil</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="/nepal.html">Népal</a></li>
+
                             </ul>
                         </div>
             </div>
             <ul class="nav-links">
-                    <li><a href="#home">Accueil</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 <li><a href="/nepal.html">Népal</a></li>
             </ul>
         </nav>
