--- a/nepal.html
+++ b/nepal.html
@@ -11,20 +11,37 @@
     <nav class="navbar">
         <div class="logo">
             <img src="img/nepal/2016-2018.jpg" alt="2016-2018"> 
-                    <button id="menu-btn" class="menu-button"> ☰Menu</button>
+            <button id="menu-btn" class="menu-button"> ☰Menu</button>
+            <div id="sidebar" class="sidebar">
+                <button id="button" class="button">
+                  <div class="button-box">
+                    <span class="button-elem">
+                      <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"></path>
+                      </svg>
+                    </span>
+                    <span class="button-elem">
+                      <svg viewBox="0 0 46 40">
+                        <path d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"></path>
+                      </svg>
+                    </span>
+                  </div>
+                </button>
+                
+                <ul>
+                    <li><a href="/nepal.html">Népal</a></li>
+
+                </ul>
+            </div>
         </div>
         <ul class="nav-links">
-                <li><a href="#home">Accueil</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-            <li><a href="/nepal.html">Népal</a></li>
+            <li><a href="/index.html">Freeze Corleone</a></li>
         </ul>
     </nav>
 
     <div class="card-video">
         <video class="video-content" controls>
-            <source src="img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
+            <source src="img/nepal/445anime.gif" type="gif" class="video-content">
             Your browser does not support the video tag.
         </video>
         <div class="card-content">
@@ -33,6 +50,6 @@
             <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
         </div>
     </div>
-    
+    <script src="script.js" type="module"></script>
 </body>
 </html>
