--- a/nepal.html
+++ b/nepal.html
@@ -40,16 +40,16 @@
     </nav>
 
     <div class="card-video">
-        <video class="video-content" controls>
-            <source src="img/nepal/445anime.gif" type="gif" class="video-content">
-            Your browser does not support the video tag.
-        </video>
-        <div class="card-content">
-            <h2 class="card-title">Video Title</h2>
-            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
-        </div>
-    </div>
+      <video class="video-content" controls>
+          <source src="https://www.youtube.com/watch?v=N7K_6MqEAxE" ="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <div class="card-content">
+          <h2 class="card-title">Video Title</h2>
+          <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
+          <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
+      </div>
+  </div>
     <script src="script.js" type="module"></script>
 </body>
 </html>
