--- a/nepal.html
+++ b/nepal.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="nepal.css">
 </head>
 <body>
+  <header>
     <nav class="navbar">
         <div class="logo">
             <img src="img/nepal/2016-2018.jpg" alt="2016-2018"> 
@@ -38,10 +39,11 @@
             <li><a href="/index.html">Freeze Corleone</a></li>
         </ul>
     </nav>
-
-    <div class="card-video">
+  </header>
+  <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
+  <div class="card-video">
       <video class="video-content" controls>
-          <source src="https://www.youtube.com/watch?v=N7K_6MqEAxE" ="video/mp4">
+          <source src="img/Népal - Sundance.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
       <div class="card-content">
