--- a/html/index.html
+++ b/html/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freeze cordon bleu</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/1200x1200bb.jpg" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/freeze/1200x1200bb.jpg" type="image/png">
 </head>
 <body>
     <header class="color">
         <!-- Barre de navigation -->
         <nav class="navbar">
             <div class="logo">
-                <img src="img/1200x1200bb.jpg" alt="Freeze"> 
+                <img src="../img/freeze/1200x1200bb.jpg" alt="Freeze"> 
                         <button id="menu-btn" class="menu-button"> ☰Menu</button>
                         <div id="sidebar" class="sidebar">
                             <button id="button" class="button">
@@ -31,20 +31,21 @@
                             </button>
                             
                             <ul>
-                                <li><a href="/nepal.html">Népal</a></li>
+                                <li><a href="../html/nepal.html">Népal</a></li>
 
                             </ul>
                         </div>
             </div>
             <ul class="nav-links">
-                <li><a href="/nepal.html">Népal</a></li>
+                <li><a href="../html/nepal.html">Népal</a></li>
+                <li><a href="../html/nekfeu.html">Nekfeu</a></li>
             </ul>
         </nav>
     </header>
     <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
     <div class="card-video">
         <video class="video-content" controls>
-            <source src="img/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
+            <source src="../img/freeze/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="card-content">
@@ -56,6 +57,6 @@
     
     <footer>
     </footer>
-    <script src="script.js" type="module"></script>
+    <script src="../script.js" type="module"></script>
 </body>
 </html>     
