--- a/html/nekfeu.html
+++ b/html/nekfeu.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Népal</title>
-    <link rel="icon" href="img/nepal/Cover.png" type="image/png">
-    <link rel="stylesheet" href="nepal.css">
+    <link rel="icon" href="../img/nepal/Cover.png" type="image/png">
+    <link rel="stylesheet" href="../css/nekfeu.css">
 </head>
 <body>
   <header>
     <nav class="navbar">
         <div class="logo">
-            <img src="img/nepal/2016-2018.jpg" alt="2016-2018"> 
+            <img src="../img/nepal/2016-2018.jpg" alt="2016-2018"> 
             <button id="menu-btn" class="menu-button"> ☰Menu</button>
             <div id="sidebar" class="sidebar">
                 <button id="button" class="button">
@@ -30,28 +30,29 @@
                 </button>
                 
                 <ul>
-                    <li><a href="/nepal.html">Népal</a></li>
+                    <li><a href="../html/nepal.html">Népal</a></li>
 
                 </ul>
             </div>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Freeze Corleone</a></li>
+            <li><a href="../html/index.html">Freeze Corleone</a></li>
+            <li><a href="../html/nekfeu.html">Nekfeu</a></li>
         </ul>
     </nav>
   </header>
   <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
   <div class="card-video">
       <video class="video-content" controls>
-          <source src="img/Népal - Sundance.mp4" type="video/mp4">
+          <source src="../img/nekfeu/Nekfeu - LES ÉTOILES VAGABONDES - Trailer.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
       <div class="card-content">
           <h2 class="card-title">Video Title</h2>
           <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-          <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
+          <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Watch Full Video</button>
       </div>
   </div>
-    <script src="script.js" type="module"></script>
+    <script src="../script.js" type="module"></script>
 </body>
 </html>
