--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
                             
                             <ul>
                                 <li><a href="../html/nepal.html">Népal</a></li>
+                                <li><a href="../html/nekfeu.html">Nekfeu</a></li> 
 
                             </ul>
                         </div>
