--- a/html/nekfeu.html
+++ b/html/nekfeu.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Népal</title>
-    <link rel="icon" href="../img/nepal/Cover.png" type="image/png">
+    <link rel="icon" href="../img/nekfeu/Cyborg-Edition-Numerotee.jpg" type="image/png">
     <link rel="stylesheet" href="../css/nekfeu.css">
 </head>
 <body>
   <header>
     <nav class="navbar">
         <div class="logo">
-            <img src="../img/nepal/2016-2018.jpg" alt="2016-2018"> 
+            <img src="../img/nekfeu/f692d58663200b0a37cd258341755a71.1000x1000x1.jpg" alt="2016-2018"> 
             <button id="menu-btn" class="menu-button"> ☰Menu</button>
             <div id="sidebar" class="sidebar">
                 <button id="button" class="button">
@@ -31,17 +31,18 @@
                 
                 <ul>
                     <li><a href="../html/nepal.html">Népal</a></li>
+                    <li><a href="../html/index.html">Freeze Corleone</a></li>
 
                 </ul>
             </div>
         </div>
         <ul class="nav-links">
             <li><a href="../html/index.html">Freeze Corleone</a></li>
-            <li><a href="../html/nekfeu.html">Nekfeu</a></li>
+            <li><a href="../html/nepal.html">Népal</a></li>
         </ul>
     </nav>
   </header>
-  <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
+  <h1 class="h1">Bienvenue sur le site de Nekfeu le Feu Fennec </h1>
   <div class="card-video">
       <video class="video-content" controls>
           <source src="../img/nekfeu/Nekfeu - LES ÉTOILES VAGABONDES - Trailer.mp4" type="video/mp4">
