--- a/html/nepal.html
+++ b/html/nepal.html
@@ -30,7 +30,8 @@
                 </button>
                 
                 <ul>
-                    <li><a href="../html/nepal.html">Népal</a></li>
+                    <li><a href="../html/index.html">Freeze Corleone</a></li>
+                    <li><a href="../html/nekfeu.html">Nekfeu</a></li>
 
                 </ul>
             </div>
@@ -41,7 +42,7 @@
         </ul>
     </nav>
   </header>
-  <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
+  <h1 class="h1">Bienvenue sur le site de Népal / KLM / Maître Splinters</h1>
   <div class="card-video">
       <video class="video-content" controls>
           <source src="../img/nepal/Népal - Sundance.mp4" type="video/mp4">
