--- a/html/index.html
+++ b/html/index.html
@@ -43,21 +43,60 @@
             </ul>
         </nav>
     </header>
-    <h1 class="h1">Bienvenue sur le site de Freeze cordon bleu</h1>
-    <div class="card-video">
-        <video class="video-content" controls>
-            <source src="../img/freeze/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="card-content">
-            <h2 class="card-title">Video Title</h2>
-            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Watch Full Video</button>
-        </div>
-    </div>
-    
-    <footer>
-    </footer>
+    <div class="container">
+      <h1 class="h1">Bienvenue sur le site de Freeze Corleone</h1>
+
+      <div class="card-video">
+          <video class="video-content" controls>
+              <source src="../img/freeze/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
+              Votre navigateur ne supporte pas la balise vidéo.
+          </video>
+          <div class="card-content">
+              <h2 class="card-title">Encore les Problèmes</h2>
+              <p class="card-description">Découvrez le clip officiel de "Encore les Problèmes", un titre marquant de Freeze Corleone et Kalash Criminel.</p>
+              <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Regarder sur YouTube</button>
+          </div>
+      </div>
+
+      <h1>Biographie de Freeze Corleone</h1>
+
+      <h2>Débuts et influences</h2>
+      <p>
+          Freeze Corleone, de son vrai nom Issa Lorenzo Diakhaté, est un rappeur, auteur-compositeur et producteur français, 
+          né le 6 juin 1992 à Les Lilas, en Seine-Saint-Denis. Influencé par des artistes comme Nas, Wu-Tang Clan et MF Doom, 
+          il développe un style unique mêlant textes complexes et productions sombres.
+      </p>
+
+      <h2>Carrière musicale</h2>
+      <p>
+          Membre fondateur du collectif 667, Freeze Corleone se fait connaître grâce à des projets comme 
+          <em>Projet Blue Beam</em> (2018) et <em>La Menace Fantôme</em> (2020). Ce dernier album marque un tournant majeur 
+          dans sa carrière, avec des titres phares tels que <strong>Freeze Raël</strong> et <strong>Rap Catéchisme</strong>, 
+          qui lui valent une reconnaissance nationale.
+      </p>
+
+      <h2>Controverses</h2>
+      <p>
+          Freeze Corleone est une figure controversée du rap français, accusé par certains de textes provocateurs et polémiques. 
+          Toutefois, ses fans apprécient son indépendance artistique et son approche audacieuse.
+      </p>
+
+      <h2>Style et héritage</h2>
+      <p>
+          Son style se caractérise par des textes codés, des instrumentales sombres et une indépendance artistique. Freeze 
+          Corleone continue d'influencer une nouvelle génération de rappeurs tout en restant fidèle à son univers unique.
+      </p>
+
+      <h2>Discographie sélective</h2>
+      <ul>
+          <li><em>Projet Blue Beam</em> (2018)</li>
+          <li><em>La Menace Fantôme</em> (2020)</li>
+          <li>Collaborations avec le collectif 667</li>
+      </ul>
+  </div>
+  <footer id="footer">
+    <p>&copy; <span id="annee-actuelle"></span> - Tous droits réservés.</p>
+  </footer>
     <script src="../script.js" type="module"></script>
 </body>
 </html>     
