--- a/html/nekfeu.html
+++ b/html/nekfeu.html
@@ -42,7 +42,7 @@
         </ul>
     </nav>
   </header>
-  <h1 class="h1">Bienvenue sur le site de Nekfeu le Feu Fennec </h1>
+  <h1 class="h1">Bienvenue sur le site de Nekfeu le Feu Fennec   </h1>
   <div class="card-video">
       <video class="video-content" controls>
           <source src="../img/nekfeu/Nekfeu - LES ÉTOILES VAGABONDES - Trailer.mp4" type="video/mp4">
@@ -54,6 +54,9 @@
           <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Watch Full Video</button>
       </div>
   </div>
+  <footer id="footer">
+    <p>&copy; <span id="annee-actuelle"></span> - Tous droits réservés.</p>
+   </footer>
     <script src="../script.js" type="module"></script>
 </body>
 </html>
