--- a/html/nepal.html
+++ b/html/nepal.html
@@ -42,18 +42,48 @@
         </ul>
     </nav>
   </header>
-  <h1 class="h1">Bienvenue sur le site de Népal / KLM / Maître Splinters</h1>
-  <div class="card-video">
-      <video class="video-content" controls>
-          <source src="../img/nepal/Népal - Sundance.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-      </video>
-      <div class="card-content">
-          <h2 class="card-title">Video Title</h2>
-          <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-          <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=N7K_6MqEAxE', '_blank')">Watch Full Video</button>
-      </div>
+  <div class="container">
+    <h1 class="h1">Bienvenue sur le site de Népal / KLM / Maître Splinters</h1>
+    <div class="card-video">
+        <video class="video-content" controls>
+            <source src="../img/nepal/Népal - Sundance.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="card-content">
+            <h2 class="card-title">Video Title</h2>
+            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
+            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=N7K_6MqEAxE', '_blank')">Watch Full Video</button>
+        </div>
+    </div>
+
+    <h1>Biographie de Népal</h1>
+    <p><strong>Népal</strong>, de son vrai nom <strong>Nabil Bahloul</strong>, est un rappeur et auteur-compositeur français, né le 27 décembre 1990 à Paris. Il fait partie de la scène rap indépendante et s'est distingué par son univers sombre et introspectif, abordant des thèmes tels que la solitude, l'authenticité, la vie dans les quartiers populaires, ainsi que la recherche d'identité.</p>
+
+    <h2>Débuts</h2>
+    <p>Népal grandit dans le 19e arrondissement de Paris et découvre la musique rap durant son adolescence. En tant qu'autodidacte, il se lance dans l'écriture et la composition de morceaux, influencé par les grandes figures du rap français comme <strong>IAM</strong>, <strong>Lunatic</strong>, et <strong>NTM</strong>, mais aussi par des artistes américains comme <strong>Nas</strong> ou <strong>Jay-Z</strong>. Il débute sa carrière dans les années 2000 en participant à des freestyles et en partageant ses premiers morceaux sur Internet.</p>
+
+    <h2>Carrière</h2>
+    <p>Népal fait ses premiers pas dans la scène rap sous le nom de <strong>Népal</strong> au sein du collectif <strong>Tremplin 93</strong>, où il se distingue par sa plume poétique et mélancolique. Il gagne en notoriété avec des mixtapes et des projets collaboratifs, mais c'est surtout avec son premier album solo, <strong>"Népal"</strong>, sorti en 2016, qu'il se fait véritablement connaître. L'album est un succès critique, apprécié pour son écriture profonde et la richesse de ses productions musicales.</p>
+    <p>Par la suite, Népal continue à construire son univers avec des projets comme <strong>"Le monde ou rien" (2018)</strong>, qui marque un tournant dans sa carrière avec des morceaux plus sombres et introspectifs. Cet album rencontre également un large succès auprès de ses fans et l'ancre comme une figure incontournable du rap français alternatif.</p>
+
+    <h2>Style musical et influences</h2>
+    <p>Le rap de Népal se caractérise par une grande recherche artistique, un mélange de mélodies atmosphériques, de beats lo-fi et de textes profonds et introspectifs. Ses paroles sont souvent imprégnées de poésie, abordant des thématiques telles que la quête de sens, la lutte contre les démons intérieurs et la critique sociale. Il se distingue par sa capacité à allier le rap traditionnel avec des sonorités plus expérimentales, empruntant parfois à l'électro et à la musique ambiante.</p>
+    <p>Népal a également été influencé par des artistes internationaux, notamment <strong>Kanye West</strong>, <strong>Drake</strong>, et <strong>Kid Cudi</strong>, ce qui se reflète dans son approche musicale unique, oscillant entre mélodies chantées et rap classique.</p>
+
+    <h2>Décès et héritage</h2>
+    <p>Malheureusement, <strong>Népal</strong> est décédé le 9 novembre 2020, à l'âge de 29 ans, suite à une dépression qu'il traversait depuis plusieurs mois. Sa disparition a bouleversé la scène musicale française, notamment le rap, où il était considéré comme une figure montante et respectée. Son décès a suscité une immense vague de solidarité et d'hommages, tant de la part de ses pairs que de ses fans, qui saluent son travail artistique, son intégrité et sa manière de rester fidèle à lui-même dans un milieu parfois impitoyable.</p>
+    <p>Népal laisse derrière lui un héritage précieux dans le rap français, marqué par sa poésie, sa sensibilité et son approche unique de la musique. Ses albums et morceaux continuent d'inspirer de nombreux jeunes artistes, et il reste une référence pour ceux qui cherchent à s'exprimer avec sincérité et profondeur.</p>
+
+    <h2>Discographie sélective</h2>
+    <ul>
+        <li><strong>"Népal"</strong> (2016)</li>
+        <li><strong>"Le monde ou rien"</strong> (2018)</li>
+        <li><strong>"Silvio"</strong> (2020, posthume)</li>
+    </ul>
   </div>
+  <footer id="footer">
+    <p> &copy; <span id="annee-actuelle"></span> - Tous droits réservés.</p>
+  </footer>
     <script src="../script.js" type="module"></script>
 </body>
 </html>
