--- a/html/test.html
+++ b/html/test.html
@@ -1,31 +1,158 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="test.css"></link>
-    <script src="test.js" type="module"></script>
+    <title>Biographie de Freeze Corleone</title>
+    <style>
+        /* Style général pour la page */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            color: #fff;
+            background: url('https://media.giphy.com/media/3o6ZsY8dQt3u2NzY48/giphy.gif') no-repeat center center fixed;
+            background-size: cover;
+            overflow-x: hidden;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7); /* Fond semi-transparent pour le contenu */
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        h1, h2 {
+            color: #f1c40f;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            margin-top: 20px;
+        }
+
+        p {
+            font-size: 1rem;
+            line-height: 1.8;
+            margin-bottom: 15px;
+        }
+
+        ul {
+            margin: 20px 0;
+            padding-left: 20px;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        .card-video {
+            margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .video-content {
+            width: 100%;
+            max-width: 800px;
+            border: 5px solid #f1c40f;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .card-content {
+            margin-top: 10px;
+            text-align: center;
+        }
+
+        .card-title {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+
+        .card-description {
+            font-size: 1rem;
+            color: #ddd;
+        }
+
+        .card-button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            background-color: #f1c40f;
+            color: #000;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .card-button:hover {
+            background-color: #e67e22;
+        }
+    </style>
 </head>
 <body>
-    <div class="container" speed=70>
-        <div class='scrolling-text'>
-          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
-            not so big but still very big</h2>
+    <div class="container">
+        <h1 class="h1">Bienvenue sur le site de Freeze Corleone</h1>
+
+        <div class="card-video">
+            <video class="video-content" controls>
+                <source src="../img/freeze/Kalash Criminel (Ft. Freeze Corleone) - ENCORE LES PROBLÈMES (Clip officiel).mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la balise vidéo.
+            </video>
+            <div class="card-content">
+                <h2 class="card-title">Encore les Problèmes</h2>
+                <p class="card-description">Découvrez le clip officiel de "Encore les Problèmes", un titre marquant de Freeze Corleone et Kalash Criminel.</p>
+                <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=uWqboAXPwhY', '_blank')">Regarder sur YouTube</button>
+            </div>
         </div>
-      </div>
-      <div class="container left-to-right" speed=100>
-        <div class='scrolling-text'>
-          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
-            not so big but still very big</h2>
-        </div>
-      </div>
-      <div class="container">
-        <div class='scrolling-text'>
-          <h2 class="scrolling-text-content">This is some other text, not so big but still very big This is some other text,
-            not so big but still very big</h2>
-        </div>
-      </div>       
+
+        <h1>Biographie de Freeze Corleone</h1>
+
+        <h2>Débuts et influences</h2>
+        <p>
+            Freeze Corleone, de son vrai nom Issa Lorenzo Diakhaté, est un rappeur, auteur-compositeur et producteur français, 
+            né le 6 juin 1992 à Les Lilas, en Seine-Saint-Denis. Influencé par des artistes comme Nas, Wu-Tang Clan et MF Doom, 
+            il développe un style unique mêlant textes complexes et productions sombres.
+        </p>
+
+        <h2>Carrière musicale</h2>
+        <p>
+            Membre fondateur du collectif 667, Freeze Corleone se fait connaître grâce à des projets comme 
+            <em>Projet Blue Beam</em> (2018) et <em>La Menace Fantôme</em> (2020). Ce dernier album marque un tournant majeur 
+            dans sa carrière, avec des titres phares tels que <strong>Freeze Raël</strong> et <strong>Rap Catéchisme</strong>, 
+            qui lui valent une reconnaissance nationale.
+        </p>
+
+        <h2>Controverses</h2>
+        <p>
+            Freeze Corleone est une figure controversée du rap français, accusé par certains de textes provocateurs et polémiques. 
+            Toutefois, ses fans apprécient son indépendance artistique et son approche audacieuse.
+        </p>
+
+        <h2>Style et héritage</h2>
+        <p>
+            Son style se caractérise par des textes codés, des instrumentales sombres et une indépendance artistique. Freeze 
+            Corleone continue d'influencer une nouvelle génération de rappeurs tout en restant fidèle à son univers unique.
+        </p>
+
+        <h2>Discographie sélective</h2>
+        <ul>
+            <li><em>Projet Blue Beam</em> (2018)</li>
+            <li><em>La Menace Fantôme</em> (2020)</li>
+            <li>Collaborations avec le collectif 667</li>
+        </ul>
+    </div>
 </body>
 </html>
