--- a/html/nekfeu.html
+++ b/html/nekfeu.html
@@ -42,17 +42,52 @@
         </ul>
     </nav>
   </header>
-  <h1 class="h1">Bienvenue sur le site de Nekfeu le Feu Fennec   </h1>
-  <div class="card-video">
-      <video class="video-content" controls>
-          <source src="../img/nekfeu/Nekfeu - LES ÉTOILES VAGABONDES - Trailer.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-      </video>
-      <div class="card-content">
-          <h2 class="card-title">Video Title</h2>
-          <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-          <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Watch Full Video</button>
-      </div>
+  <div class="container">
+    <h1 class="h1">Bienvenue sur le site de Nekfeu le Feu Fennec   </h1>
+    <div class="card-video">
+        <video class="video-content" controls>
+            <source src="../img/nekfeu/Nekfeu - LES ÉTOILES VAGABONDES - Trailer.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="card-content">
+            <h2 class="card-title">Video Title</h2>
+            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
+            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Watch Full Video</button>
+        </div>
+    </div>
+    <h1>Biographie de Nekfeu</h1>
+    <p><strong>Nekfeu</strong>, de son vrai nom <strong>Ken Samaras</strong>, est un rappeur, compositeur et réalisateur français, né le 3 avril 1990 à La Trinité, dans les Alpes-Maritimes. Issu d'une famille franco-grecque, il est l'un des membres fondateurs du collectif <strong>1995</strong>, mais c’est en solo qu’il connaît une reconnaissance massive, s'imposant comme l'une des figures les plus importantes de la scène rap contemporaine en France. Nekfeu est également un membre du supergroupe <strong>L'Entourage</strong>, où il partage la scène avec des rappeurs comme <strong>Alpha Wann</strong>, <strong>Doums</strong>, et <strong>Caballero</strong>.</p>
+
+    <h2>Débuts</h2>
+    <p>Nekfeu commence à s'intéresser au rap dès son adolescence, influencé par les grands noms du rap français comme <strong>IAM</strong>, <strong>NTM</strong>, et <strong>Lunatic</strong>, mais aussi par le rap américain (Dr. Dre, Nas). Il se fait d'abord connaître à travers des battles et des freestyles, notamment sur des plateformes comme <strong>Skyrock</strong> et <strong>YouTube</strong>. Il devient un membre actif du collectif <strong>1995</strong>, créé en 2008 avec d’autres jeunes rappeurs parisiens, et s'illustre dans des morceaux comme <strong>"La danse des esprits"</strong>. Ce collectif va marquer la scène rap de l'époque, notamment par son mélange de classicisme et de modernité.</p>
+
+    <h2>Carrière solo</h2>
+    <p>Nekfeu commence sa carrière solo avec la sortie de son premier album <strong>"Feu"</strong> en 2015, qui rencontre un énorme succès, tant critique que commercial. L'album est certifié disque de platine en moins d'un an et est soutenu par des titres phares comme <strong>"On verra"</strong>, <strong>"Ma dope"</strong> et <strong>"Nekkfeu"</strong>. Il y aborde des thèmes variés tels que l'introspection, les inégalités sociales, ou encore ses réflexions sur la vie et la société. Cet album marque également la maturité artistique du rappeur, qui réussit à se démarquer par une plume acérée et une production soignée.</p>
+
+    <p>En 2016, Nekfeu fait partie du projet <strong>"Cyborg"</strong>, son deuxième album studio. Ce dernier mélange des sonorités électroniques, du rap classique, et une forte dose de poésie urbaine. L'album est une nouvelle réussite et est bien accueilli par la critique. Il contient des titres comme <strong>"Tout peut changer"</strong> et <strong>"Mauvaise graine"</strong>, où il livre des réflexions sur la politique, la société, et sa place dans le monde. <strong>"Cyborg"</strong> confirme son statut d'artiste incontournable du rap français.</p>
+
+    <p>En 2019, Nekfeu revient avec un projet plus intime et introspectif, <strong>"Les Étoiles vagabondes"</strong>, un album double qui aborde des thèmes personnels tels que la recherche de soi, les relations humaines, et la quête de sens dans un monde en constante évolution. L’album est un véritable succès et confirme la place de Nekfeu parmi les leaders du rap français. Il est soutenu par des titres comme <strong>"L'Ombre"</strong>, <strong>"Salut c'est cool"</strong>, et <strong>"Ailleurs"</strong>.</p>
+
+    <h2>Style musical et influences</h2>
+    <p>Le style de Nekfeu se caractérise par une grande diversité musicale. Il mêle le rap classique, des influences électroniques, de la trap, et parfois même des sonorités plus mélancoliques, influencé par des artistes comme <strong>Kanye West</strong>, <strong>Drake</strong>, ou <strong>Kendrick Lamar</strong>. Il se distingue par sa capacité à naviguer entre des flows rapides, des textes poétiques et des morceaux plus introspectifs. Les thèmes qu’il aborde vont de la politique à la société, en passant par des réflexions profondes sur la condition humaine.</p>
+
+    <p>Sa plume est particulièrement marquée par une grande maturité, et ses textes sont souvent empreints de poésie, avec des jeux de mots raffinés et des métaphores travaillées. Il sait aussi alterner entre des moments plus légers et des morceaux plus graves, abordant des sujets de société comme le racisme, l'injustice sociale, et les inégalités.</p>
+
+    <h2>Collaborations et projets collectifs</h2>
+    <p>En parallèle de sa carrière solo, Nekfeu participe à de nombreux projets collectifs. Il fait partie de <strong>L'Entourage</strong>, un groupe regroupant des rappeurs parisiens, et il a également été un membre central du collectif <strong>1995</strong>, avec lequel il a connu ses premiers succès. Il a aussi collaboré avec de nombreux artistes du rap français et au-delà, contribuant à des projets communs avec des artistes comme <strong>Sushi</strong>, <strong>Sneazzy</strong>, ou encore <strong>Keny Arkana</strong>.</p>
+
+    <h2>Reconnaissance et impact</h2>
+    <p>Nekfeu est aujourd'hui l'un des rappeurs les plus respectés de sa génération. Il a marqué la scène rap française par son écriture, sa vision du monde, et sa capacité à mélanger des influences variées. Son influence dépasse largement les frontières du rap, et il est régulièrement cité comme un modèle pour les jeunes artistes de la scène musicale actuelle. Il a d'ailleurs reçu de nombreuses récompenses, notamment aux <strong>Victoires de la Musique</strong>, et il est devenu une figure incontournable du rap français.</p>
+
+    <h2>Discographie sélective</h2>
+    <ul>
+        <li><strong>"Feu"</strong> (2015)</li>
+        <li><strong>"Cyborg"</strong> (2016)</li>
+        <li><strong>"Les Étoiles vagabondes"</strong> (2019)</li>
+        <li><strong>"Les Étoiles vagabondes: Expansion"</strong> (2020)</li>
+        <li><strong>"Nekkfeu en live"</strong> (2020)</li>
+    </ul>
+
   </div>
   <footer id="footer">
     <p>&copy; <span id="annee-actuelle"></span> - Tous droits réservés.</p>
