--- a/html/nepal.html
+++ b/html/nepal.html
@@ -32,6 +32,7 @@
                 <ul>
                     <li><a href="../html/index.html">Freeze Corleone</a></li>
                     <li><a href="../html/nekfeu.html">Nekfeu</a></li>
+                    <li><a href="../html/josman.html">Josman</a></li>
 
                 </ul>
             </div>
@@ -39,6 +40,7 @@
         <ul class="nav-links">
             <li><a href="../html/index.html">Freeze Corleone</a></li>
             <li><a href="../html/nekfeu.html">Nekfeu</a></li>
+            <li><a href="../html/josman.html">Josman</a></li>
         </ul>
     </nav>
   </header>
