--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@
                             <ul>
                                 <li><a href="../html/nepal.html">Népal</a></li>
                                 <li><a href="../html/nekfeu.html">Nekfeu</a></li> 
+                                <li><a href="../html/josman.html">Josman</a></li>
 
                             </ul>
                         </div>
@@ -40,6 +41,7 @@
             <ul class="nav-links">
                 <li><a href="../html/nepal.html">Népal</a></li>
                 <li><a href="../html/nekfeu.html">Nekfeu</a></li>
+                <li><a href="../html/josman.html">Josman</a></li>
             </ul>
         </nav>
     </header>
