--- a/html/josman.html
+++ b/html/josman.html
@@ -33,15 +33,15 @@
                 <ul>
                     <li><a href="../html/nepal.html">Népal</a></li>
                     <li><a href="../html/index.html">Freeze Corleone</a></li>
-                    <li><a href="../html/josman.html">Josman</a></li>
+                    <li><a href="../html/nekfeu.html">Nekfeu</a></li>
 
                 </ul>
             </div>
         </div>
         <ul class="nav-links">
-            <li><a href="../html/index.html">Freeze Corleone</a></li>
             <li><a href="../html/nepal.html">Népal</a></li>
-            <li><a href="../html/josman.html">Josman</a></li>
+            <li><a href="../html/index.html">Freeze Corleone</a></li>
+            <li><a href="../html/nekfeu.html">Nekfeu</a></li>
         </ul>
     </nav>
   </header>
