--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freeze cordon bleu</title>
+    <title>Freeze Corleone</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/freeze/1200x1200bb.jpg" type="image/png">
 </head>
@@ -34,16 +34,17 @@
                                 <li><a href="../html/nepal.html">Népal</a></li>
                                 <li><a href="../html/nekfeu.html">Nekfeu</a></li> 
                                 <li><a href="../html/josman.html">Josman</a></li>
-
+                                <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
                             </ul>
                         </div>
             </div>
-            <ul class="nav-links">
-                <li><a href="../html/nepal.html">Népal</a></li>
-                <li><a href="../html/nekfeu.html">Nekfeu</a></li>
-                <li><a href="../html/josman.html">Josman</a></li>
-            </ul>
-        </nav>
+              <ul class="nav-links">
+                  <li><a href="../html/nepal.html">Népal</a></li>
+                  <li><a href="../html/nekfeu.html">Nekfeu</a></li>
+                  <li><a href="../html/josman.html">Josman</a></li>
+                  <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
+              </ul>
+      </nav>
     </header>
     <div class="container">
       <h1 class="h1">Bienvenue sur le site de Freeze Corleone</h1>
