--- a/html/nekfeu.html
+++ b/html/nekfeu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Népal</title>
+    <title>Nekfeu</title>
     <link rel="icon" href="../img/nekfeu/Cyborg-Edition-Numerotee.jpg" type="image/png">
     <link rel="stylesheet" href="../css/nekfeu.css">
 </head>
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
         <div class="logo">
-            <img src="../img/nekfeu/f692d58663200b0a37cd258341755a71.1000x1000x1.jpg" alt="2016-2018"> 
+            <img src="../img/nekfeu/f692d58663200b0a37cd258341755a71.1000x1000x1.jpg" alt="f692d58663200b0a37cd258341755a71.1000x1000x1.jpg"> 
             <button id="menu-btn" class="menu-button"> ☰Menu</button>
             <div id="sidebar" class="sidebar">
                 <button id="button" class="button">
@@ -29,12 +29,11 @@
                   </div>
                 </button>
                 
-                
                 <ul>
-                    <li><a href="../html/nepal.html">Népal</a></li>
                     <li><a href="../html/index.html">Freeze Corleone</a></li>
+                    <li><a href="../html/nepal.html">Népal</a></li>
                     <li><a href="../html/josman.html">Josman</a></li>
-
+                    <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
                 </ul>
             </div>
         </div>
@@ -42,6 +41,7 @@
             <li><a href="../html/index.html">Freeze Corleone</a></li>
             <li><a href="../html/nepal.html">Népal</a></li>
             <li><a href="../html/josman.html">Josman</a></li>
+            <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
         </ul>
     </nav>
   </header>
@@ -53,9 +53,9 @@
             Your browser does not support the video tag.
         </video>
         <div class="card-content">
-            <h2 class="card-title">Video Title</h2>
-            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Watch Full Video</button>
+            <h2 class="card-title">Trailer Film LEV (Les Étoiles Vagabondes)</h2>
+            <p class="card-description">Découvrez le Trailer officiel de "Les étoiles Vagabondes", un film marquant de Nekfeu ressemblant à deux étoiles qui s'éloigne l'une de l'aute inexorablement comme tout</p>
+            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=NnKxdF6NZm0&t=1s', '_blank')">Regarder sur YouTube</button>
         </div>
     </div>
     <h1>Biographie de Nekfeu</h1>
