--- a/html/nepal.html
+++ b/html/nepal.html
@@ -33,6 +33,7 @@
                     <li><a href="../html/index.html">Freeze Corleone</a></li>
                     <li><a href="../html/nekfeu.html">Nekfeu</a></li>
                     <li><a href="../html/josman.html">Josman</a></li>
+                    <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
 
                 </ul>
             </div>
@@ -41,6 +42,7 @@
             <li><a href="../html/index.html">Freeze Corleone</a></li>
             <li><a href="../html/nekfeu.html">Nekfeu</a></li>
             <li><a href="../html/josman.html">Josman</a></li>
+            <li><a href="../html/wallace.html">Wallace Cleaver</a></li>
         </ul>
     </nav>
   </header>
@@ -52,9 +54,9 @@
             Your browser does not support the video tag.
         </video>
         <div class="card-content">
-            <h2 class="card-title">Video Title</h2>
-            <p class="card-description">This is a description of the video. It provides additional information and context for the video content.</p>
-            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=N7K_6MqEAxE', '_blank')">Watch Full Video</button>
+            <h2 class="card-title">Sundance</h2>
+            <p class="card-description">Découvrez le clip officiel de "Sundance", un titre marquant de Népal adhérent de Siddharta de Herman Hesse dans Adios Bahamas</p>
+            <button class="card-button" onclick="window.open('https://www.youtube.com/watch?v=N7K_6MqEAxE', '_blank')">Regarder sur YouTube</button>
         </div>
     </div>
 
